; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/libpicofe/gp2x/extr_soc_pollux.c_pollux_bat_capacity_get.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/libpicofe/gp2x/extr_soc_pollux.c_pollux_bat_capacity_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@battdev = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @pollux_bat_capacity_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pollux_bat_capacity_get() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i16, align 2
  store i16 0, i16* %2, align 2
  %3 = load i64, i64* @battdev, align 8
  %4 = icmp slt i64 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %20

6:                                                ; preds = %0
  %7 = load i64, i64* @battdev, align 8
  %8 = call i32 @read(i64 %7, i16* %2, i32 2)
  %9 = sext i32 %8 to i64
  %10 = icmp ne i64 %9, 2
  br i1 %10, label %11, label %12

11:                                               ; preds = %6
  store i32 -1, i32* %1, align 4
  br label %20

12:                                               ; preds = %6
  %13 = load i16, i16* %2, align 2
  %14 = zext i16 %13 to i32
  switch i32 %14, label %15 [
    i32 1, label %16
    i32 2, label %17
    i32 3, label %18
    i32 4, label %19
  ]

15:                                               ; preds = %12
  br label %16

16:                                               ; preds = %12, %15
  store i32 100, i32* %1, align 4
  br label %20

17:                                               ; preds = %12
  store i32 66, i32* %1, align 4
  br label %20

18:                                               ; preds = %12
  store i32 40, i32* %1, align 4
  br label %20

19:                                               ; preds = %12
  store i32 0, i32* %1, align 4
  br label %20

20:                                               ; preds = %19, %18, %17, %16, %11, %5
  %21 = load i32, i32* %1, align 4
  ret i32 %21
}

declare dso_local i32 @read(i64, i16*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
